# kridtbot

./: AUTHORS.md  CMakeLists.txt  README.md  package.xml
config/: controller_manager.yaml  ekf.yaml  gz_bridge.yaml  joy_params.yaml  lidar_slam.yaml  mapper_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml  ukf.yaml  velocity_smoother_params.yaml
description/: depth_camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control_gz.xacro  ros2_control_myactuator.xacro  ros2_control_odrive.xacro  wheels_mec.xacro  wheels_skid.xacro
launch/: fox.launch.py  gz_spawner.launch.py  joystick.launch.py  launch_gpt.launch.py  launch_host.launch.py  launch_kridtbot.launch.py  launch_nav.launch.py  launch_rover.launch.py  lidar_slam.launch.py  lidar_slam2D.launch.py  lidar_slam3D.launch.py  localization.launch.py  pointcloud_to_scan.launch.py  rsp.launch.py  rsp_sim.launch.py  sensors.launch.py  slam_only.launch.py  ufk.launch.py  ukf.launch.py
meshes/: lidar_stand_base.STL  lidar_stand_top.STL  wheel_assem.STL
nodes/: .FKtest.cpp.swp  FKtest.cpp  SwitchController.cpp  gptPoseExtractor.cpp  imu_covariance.cpp  linear_position_pub.cpp  path_publisher.cpp  square_driver.cpp  switch_suspension_control_mode.cpp
worlds/: empty.world  maize_field.world  mars.world  moon.world
